Better bad message reporting from IO thread

This makes crash dumping optional for RPH::ShutdownForBadMessage,
and changes the thread-safe bad_message::ReceivedBadMessage to
generate its own crash dump immediately, before potentially posting
a UI thread task.

All other call sites have been updated to opt into crash dumping,
preserving previous behavior.

This ensures that bad message reports from the IO thread have a
useful crash stack.

BUG=652755
R=jam@chromium.org

Review-Url: https://codereview.chromium.org/2387113004
Cr-Commit-Position: refs/heads/master@{#423040}

Former-commit-id: f050c89a2ba1799844b3615884000d5fa7a03e11